--- a/GD1_Boostrap/B1_LamQuenVoiBoostrap/index.html
+++ b/GD1_Boostrap/B1_LamQuenVoiBoostrap/index.html
@@ -26,16 +26,16 @@
     -->
     <div class="container">
       <div class="row">
-        <div class="col-5">
+        <div class="col-lg-3 col-md-6">
           <p>Cot 1</p>
         </div>
-        <div class="col-2">
+        <div class="col-lg-3 col-md-6">
           <p>Cot 2</p>
         </div>
-        <div class="col-2">
+        <div class="col-lg-3 col-md-6">
           <p>Cot 3</p>
         </div>
-        <div class="col-3">
+        <div class="col-lg-3 col-md-6">
           <p>Cot 4</p>
         </div>
       </div>
