--- a/GD2_AngularJS/B7_B8_SPA/src/index.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/index.html
@@ -23,8 +23,10 @@
     <script src="../lib/angular.js"></script>
     <!-- angular-router.js hoac min de lam SPA -->
     <script src="../lib/angular-route.js"></script>
-    <script src="./controller/thucvat/thuc-vat-controller.js"></script>
+    <!-- <script src="./controller/thucvat/thuc-vat-controller.js"></script>
+    <script src="./controller/dongvat/dong-vat-controller.js"></script> -->
     <script src="./controller/thucvat/hien-thi.js"></script>
+    <script src="controller/lienHe/lien-he-controller.js"></script>
     <script src="route.js"></script>
   </body>
 </html>
