--- a/GD2_AngularJS/B7_B8_SPA/src/pages/lien-he.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/pages/lien-he.html
@@ -9,6 +9,19 @@
     <td>{{tv.id}}</td>
     <td>{{tv.ten}}</td>
     <td>{{tv.gioiTinh}}</td>
-    <td><img src="../../assets/{{tv.img}}" /></td>
+  </tr>
+</table>
+
+<p>DongVat</p>
+<table>
+  <tr>
+    <th>ID</th>
+    <th>Ten</th>
+    <th>Gioi tinh</th>
+  </tr>
+  <tr ng-repeat="tv in listDongVat">
+    <td>{{tv.id}}</td>
+    <td>{{tv.ten}}</td>
+    <td>{{tv.gioiTinh}}</td>
   </tr>
 </table>
