--- a/GD2_AngularJS/B7_B8_SPA/src/index.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/index.html
@@ -16,6 +16,8 @@
     <!-- ng-view: Thay doi noi dung mong 
       muon theo tung duong dan khac nhau -->
     <section ng-view></section>
+    <!-- <main ng-view></main> -->
+
     <!-- <nav ng-include="'layout/footer.html'"></nav> -->
     <!-- Footer -->
     <footer>Footer:HangNT169</footer>
@@ -23,10 +25,10 @@
     <script src="../lib/angular.js"></script>
     <!-- angular-router.js hoac min de lam SPA -->
     <script src="../lib/angular-route.js"></script>
-    <!-- <script src="./controller/thucvat/thuc-vat-controller.js"></script>
-    <script src="./controller/dongvat/dong-vat-controller.js"></script> -->
+    <!-- <script src="./controller/thucvat/thuc-vat-controller.js"></script> -->
     <script src="./controller/thucvat/hien-thi.js"></script>
-    <script src="controller/lienHe/lien-he-controller.js"></script>
+    <script src="controller/home/home-controller.js"></script>
+    <!-- <script src="controller/dongvat/dong-vat-controller.js"></script> -->
     <script src="route.js"></script>
   </body>
 </html>
