--- a/GD2_AngularJS/B7_B8_SPA/src/pages/lien-he.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/pages/lien-he.html
@@ -1,27 +1,1 @@
-<p>Đây là file sau khi tách</p>
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Ten</th>
-    <th>Gioi tinh</th>
-  </tr>
-  <tr ng-repeat="tv in listThucVat">
-    <td>{{tv.id}}</td>
-    <td>{{tv.ten}}</td>
-    <td>{{tv.gioiTinh}}</td>
-  </tr>
-</table>
-
-<p>DongVat</p>
-<table>
-  <tr>
-    <th>ID</th>
-    <th>Ten</th>
-    <th>Gioi tinh</th>
-  </tr>
-  <tr ng-repeat="tv in listDongVat">
-    <td>{{tv.id}}</td>
-    <td>{{tv.ten}}</td>
-    <td>{{tv.gioiTinh}}</td>
-  </tr>
-</table>
+{{message}}
